--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>メディカルデバイス株式会社</h1>
+            <h1>デモです。メディカルデバイス株式会社</h1>
             <p>革新的な医療機器で医療の未来を創造する</p>
         </div>
     </header>
